# supportbank-python

./: .gitignore  README.rst  pyproject.toml
support_bank/: __init__.py  bank.py  commands.py  parsing.py
transactions/: Transactions2013.json
