[tool.poetry]
name = "support_bank"
version = "0.1.0"
description = ""
authors = ["Sam Cappleman-Lynes <sam.cappleman-lynes@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
start = "support_bank:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
